Bug 1591282 - Display carets in the outline list, so that descendant backgrounds don't occlude it. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D50701